doc: suggest using pre-inst-env for git-send-email on foreign distros
On foreign distros, not using pre-inst-env when using git-send-email results
in a backtrace ending with: no code for module (guix ui)
This can be confusing as users did not have to use pre-inst-env to use
git-send-email before.

* doc/contributing.texi (Sending a Patch Series): add a note to suggest using
pre-inst-env when calling git-send-email on foreign distros.

Signed-off-by: Ludovic Courtès <ludo@gnu.org>

--- a/doc/contributing.texi
+++ b/doc/contributing.texi
@@ -1684,6 +1684,11 @@ command to submit patches.  To list the available actions of the script,
 you can invoke it via the @command{etc/teams.scm help} command.  For
 more information regarding teams, @pxref{Teams}.
 
+@quotation Note
+On foreign distros, you might have to use @command{./pre-inst-env git
+send-email} for @file{etc/teams.scm} to work.
+@end quotation
+
 @unnumberedsubsubsec Multiple Patches
 @anchor{Multiple Patches}
 @cindex cover letter
