doc: Recommend building in ‘guix shell -CPW’.
This was prompted by <https://issues.guix.gnu.org/66537>, where someone
tried to build Guix within ‘guix shell --pure’ on a foreign distro and
found that ./configure would pick software from the host system.

Suggested by Hiep Pham <hiepph9@proton.me>.

* doc/contributing.texi (Building from Git): Recommend ‘guix shell -CPW’.

Change-Id: I7694b482d982917fef6ec404f68ddacea761f482

--- a/doc/contributing.texi
+++ b/doc/contributing.texi
@@ -76,15 +76,17 @@ all the dependencies and appropriate environment variables are set up to
 hack on Guix:
 
 @example
-guix shell -D guix --pure
+guix shell -D guix -CPW
 @end example
 
 or even, from within a Git worktree for Guix:
 
 @example
-guix shell --pure
+guix shell -CPW
 @end example
 
+If @option{-C} (short for @option{--container}) is not supported on your
+system, try @command{--pure} instead of @option{-CPW}.
 @xref{Invoking guix shell}, for more information on that command.
 
 If you are unable to use Guix when building Guix from a checkout, the
